# type-c

./: .gitignore  LICENSE.md  README.md  todo.md
md-docs/: quick-guide.md
samples/: String.tc  class.tc  ffi-sample.tc  lexer_test.tc  process.tc  raylib.tc  sample.tc  sample2.tc
source/: CMakeLists.txt  main.c
source/compiler/: ast.c  ast.h  ast_json.c  ast_json.h  ast_tools.c  ast_tools.h  error.c  error.h  lexer.c  lexer.h  parser.c  parser.h  parser_resolve.c  parser_resolve.h  parser_utils.c  parser_utils.h  scope.c  scope.h  tokens.c  tokens.h  type_checker.c  type_checker.h  type_inference.c  type_inference.h
source/compiler/unittest/: import.tc  sample1.tc  sample2.tc  sample3.tc  type_decl.tc  unittest.c
source/utils/: minunit.h  parson.c  parson.h  sds.c  sds.h  vec.c  vec.h
